--- a/_config.yml
+++ b/_config.yml
@@ -40,12 +40,12 @@ comments: true
 owner:
 
   name: Sebastian Sauer
-  avatar: bio-photo.jpg
-  email: you@email.com
+  avatar: ses_201102_klein.jpg
+  email: ssauer@posteo.de
   disqus-shortname:
-  twitter: #username
+  twitter: sauer_sebastian
   facebook: #username
-  github: #username
+  github: sebastiansauer
   stackexchange: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
