--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: psy_pol
 locale: en_US
 description: "Blog zur Psychologie des oeffentlichen Zeitgeschehens"
-logo: site-logo.png
+logo: images/logo3.png
 search: true
 url: https://sebastiansauer.github.io/psy_pol
 
