change portrait pic

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ comments: true
 owner:
 
   name: Sebastian Sauer
-  avatar: ses_201102_klein.jpg
+  avatar: ses_portrait.jpg
   email: ssauer@posteo.de
   disqus-shortname:
   twitter: sauer_sebastian
