update toml config

--- a/config.toml
+++ b/config.toml
@@ -2,20 +2,29 @@ theme = "hyde"
 baseURL = "https://psy-pol.netlify.com/"
 languageCode = "de-De"
 title = "psy_pol"
-
+author = "Sebastian Sauer"
 
 license = "MIT"
-description = "Blog zur Psychologie des öffentlichen Zeitgeschehens"
 tags = ["blog", "company"]
 features = ["blog", "themes", "disqus"]
 min_version = 0.53
 
 [author]
     name = "Sebastian Sauer"
-
+    description = "Blog zur Psychologie des öffentlichen Zeitgeschehens, von Sebastian Sauer"
+    
+[site]
+    author = "Sebastian Sauer"
+    
 [params]
-  themeColor = "theme-base-04"
-  
+    themeColor = "theme-base-0d"
+    GitHubUser = "sauer_sebastian"
+    Subtitle = "Hugo is Absurdly Fast!"  
+    description = "Blog zur Psychologie des öffentlichen Zeitgeschehens, von Sebastian Sauer"
+
+
+[params.social]
+    github = "sauer_sebastian"
   
 # If Porting existing theme
 [original]
